Add JWT-bearer assertion grant
